--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>APP</title>
+  <title>websiteshore</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -37,7 +37,7 @@
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <div class="slider-item__info-suptitle suptitle-left">Surf</div>
-          <div class="slider-item__info-title">West Shore</div>
+          <div class="slider-item__info-title">Zachodni Brzeg</div>
           <div class="slider-item__info-suptext suptitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
@@ -54,6 +54,13 @@
           <a href="#" class="slider-item__info-link">
             <img src="img/arrows-right.svg" alt="">
           </a>
+        </div>
+      </div>
+    </div>
+    <div class="slider-dots">
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">01</div>
         </div>
       </div>
     </div>
