--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,21 @@
 <body>
   <!-- HEADER -->
   <header class="header">
+    <!-- LOGO -->
+      <div class="header__title">
+        trvl shore
+      </div>
+      <div class="header__aside">
+        <div class="logo">
+          <a href="img/Logo.svg"></a>
+        </div>
+        <nav class="menu">
+          <ul class="menu__list"><img src="img/iconav-1.svg" alt=""><span>Sport</span></ul>
+          <ul class="menu__list"><img src="img/iconav-2.svg" alt=""><span>Travel</span></ul>
+          <ul class="menu__list"><img src="img/iconav-3.svg" alt=""><span>Relax</span></ul>
+          <ul class="menu__list"><img src="img/iconav-4.svg" alt=""><span>Shop</span></ul>
+        </nav>
+    </div>
     <div class="header__slider">
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
