implemented left menu and logo

--- a/app/index.html
+++ b/app/index.html
@@ -17,14 +17,43 @@
       </div>
       <div class="header__aside">
         <div class="logo">
-          <a href="img/Logo.svg"></a>
+          <a href="#">
+            <img src="img/Logo.svg" alt="">
+          </a>
         </div>
         <nav class="menu">
-          <ul class="menu__list"><img src="img/iconav-1.svg" alt=""><span>Sport</span></ul>
-          <ul class="menu__list"><img src="img/iconav-2.svg" alt=""><span>Travel</span></ul>
-          <ul class="menu__list"><img src="img/iconav-3.svg" alt=""><span>Relax</span></ul>
-          <ul class="menu__list"><img src="img/iconav-4.svg" alt=""><span>Shop</span></ul>
+          <ul class="menu__list">
+            <li>
+              <a href="#">
+               <img src="img/iconav-1.svg" alt=""><span>Sport</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+               <img src="img/iconav-2.svg" alt=""><span>Travel</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+               <img src="img/iconav-3.svg" alt=""><span>Relax</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+               <img src="img/iconav-4.svg" alt=""><span>Shop</span>
+              </a>
+            </li>
+          </ul>
         </nav>
+        <div class="header__search">
+          <img src="img/Search.svg" alt="">
+        </div>
+        <div class="header__date">
+          20 <span>06 | 2020</span>
+        </div>
+        <div class="header__location">
+          California
+        </div>
     </div>
     <div class="header__slider">
       <div class="header__slider-item slider-item">
