fixed logo and animation

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         trvl shore
       </div>
       <div class="header__arrows">
-        <a href="#" class="animated zoomInDown infinite slow">
+        <a href="#" class="animated zoomInDown infinite slower">
           <img src="img/Down Arrows.svg" alt="">
         </a>
       </div>
@@ -79,8 +79,9 @@
     <div class="header__slider">
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
-          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
-          <div class="slider-item__info-title">North Shore</div>
+          <div class="slider-item__info-suptitle suptitle-left">
+            Nurkowanie</div>
+          <div class="slider-item__info-title">Północne wybrzeże</div>
           <div class="slider-item__info-suptext suptitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
@@ -90,8 +91,9 @@
       </div>
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
-          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
-          <div class="slider-item__info-title">South Shore</div>
+          <div class="slider-item__info-suptitle suptitle-left">
+            Kayaking</div>
+          <div class="slider-item__info-title">Południowe wybrzeże</div>
           <div class="slider-item__info-suptext suptitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
@@ -101,7 +103,8 @@
       </div>
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
-          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
+          <div class="slider-item__info-suptitle suptitle-left">
+            Windsurfing</div>
           <div class="slider-item__info-title">Zachodni Brzeg</div>
           <div class="slider-item__info-suptext suptitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
@@ -112,8 +115,8 @@
       </div>
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
-          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
-          <div class="slider-item__info-title">East Shore</div>
+          <div class="slider-item__info-suptitle suptitle-left">Surfing</div>
+          <div class="slider-item__info-title">wschodnie wybrzeże</div>
           <div class="slider-item__info-suptext suptitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
@@ -126,25 +129,25 @@
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">01</div>
-          <div class="dots-box__name">East Shore</div>
+          <div class="dots-box__name">Północne wybrzeże</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">01</div>
-          <div class="dots-box__name">East Shore</div>
+          <div class="dots-box__number">02</div>
+          <div class="dots-box__name">Południowe wybrzeże</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">01</div>
-          <div class="dots-box__name">East Shore</div>
+          <div class="dots-box__number">03</div>
+          <div class="dots-box__name">Zachodni Brzeg</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">01</div>
-          <div class="dots-box__name">East Shore</div>
+          <div class="dots-box__number">04</div>
+          <div class="dots-box__name">wschodnie wybrzeże</div>
         </div>
       </div>
     </div>
