implemented block surfing

--- a/app/index.html
+++ b/app/index.html
@@ -112,31 +112,40 @@
     <div class="slider-dots">
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">01</div>
+          <div class="dots-box__number">AU</div>
           <div class="dots-box__name">Północne wybrzeże</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">02</div>
+          <div class="dots-box__number">PH</div>
           <div class="dots-box__name">Południowe wybrzeże</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">03</div>
+          <div class="dots-box__number">CA</div>
           <div class="dots-box__name">Zachodni Brzeg</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
-          <div class="dots-box__number">04</div>
+          <div class="dots-box__number">FR</div>
           <div class="dots-box__name">Wschodnie wybrzeże</div>
         </div>
       </div>
     </div>
   </header>
   <!-- HEADER -->
+  <!-- SURFING -->
+  <section class="surfing">
+    <div class="title">
+      <span>
+        surfing
+        <h3>surfing</h3>
+      </span>
+    </div>
+  </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
