--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>websiteshore</title>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -137,15 +137,61 @@
     </div>
   </header>
   <!-- HEADER -->
+
   <!-- SURFING -->
   <section class="surfing">
     <div class="title">
       <span>
-        surfing
-        <h3>surfing</h3>
+        Surfing
+        <h3>Surfing</h3>
+      </span>
+    </div>
+    <div class="surfing__subtitle">
+      <div class="subtitle">
+        <div class="suptitle-left">
+          Aktualna lokalizacja
+        </div>
+        <div class="subtitle__head">
+          California <span>|</span> USA
+          </div>
+      </div>
+    </div>
+  </section>
+  <!-- SURFING -->
+
+  <!-- Travel -->
+  <section class="Travel">
+    <div class="title">
+      <span>
+        Podróż
+        <h3>Podróż</h3>
       </span>
     </div>
   </section>
+  <!-- Travel -->
+
+  <!-- Relax -->
+  <section class="Relax">
+    <div class="title">
+      <span>
+        Relaksacja
+        <h3>Relaksacja</h3>
+      </span>
+    </div>
+  </section>
+  <!-- Relax -->
+
+  <!-- Shop -->
+  <section class="Shop">
+    <div class="title">
+      <span>
+        Sklep
+        <h3>Sklep</h3>
+      </span>
+    </div>
+  </section>
+  <!-- Shop -->
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
