--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
           20 <span>06 | 2020</span>
         </div>
         <div class="header__location">
-          California
+          wrocław
         </div>
     </div>
     <div class="header__slider">
@@ -138,26 +138,39 @@
   </header>
   <!-- HEADER -->
 
-  <!-- SURFING -->
-  <section class="surfing">
+  <!-- SPORT -->
+  <section class="sport">
     <div class="title">
       <span>
-        Surfing
-        <h3>Surfing</h3>
+        Sport
+        <h3>Sport</h3>
       </span>
     </div>
-    <div class="surfing__subtitle">
+    <div class="sport__subtitle">
       <div class="subtitle">
         <div class="suptitle-left">
           Aktualna lokalizacja
         </div>
         <div class="subtitle__head">
-          California <span>|</span> USA
+          wrocław <span>|</span> pl
           </div>
+      </div>
+      <div class="sport-slider">
+        <div class="sport-box">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title"></div>
+            <div class="sport-box__inner-title-location"></div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
-  <!-- SURFING -->
+  <!-- SPORT -->
 
   <!-- Travel -->
   <section class="Travel">
