implemented slick in sport block

--- a/app/index.html
+++ b/app/index.html
@@ -146,20 +146,98 @@
         <h3>Sport</h3>
       </span>
     </div>
-    <div class="sport__subtitle">
-      <div class="subtitle">
-        <div class="suptitle-left">
-          Aktualna lokalizacja
-        </div>
-        <div class="subtitle__head">
-          wrocław <span>|</span> pl
+      <div class="sport__subtitle">
+        <div class="subtitle">
+          <div class="suptitle-left">
+            Aktualna lokalizacja
           </div>
+          <div class="subtitle__head">
+            wrocław <span>|</span> pl
+            </div>
+        </div>
       </div>
       <div class="sport-slider">
-        <div class="sport-box">
+        <div class="sport-box" style="background-image: url(img/sport-1.jpeg);">
+          <div class="sport-box__inner"> 
+            <div class="sport-box__inner-title">Windsurfing</div>
+            <div class="sport-box__inner-title-location">Whitehaven Beach <span>|</span> Australia</div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-2.jpeg);">
           <div class="sport-box__inner">
-            <div class="sport-box__inner-title"></div>
-            <div class="sport-box__inner-title-location"></div>
+            <div class="sport-box__inner-title">Kayaking</div>
+            <div class="sport-box__inner-title-location">Las Salinas <span>|</span> Spain </div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-3.jpeg);">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title">Diving</div>
+            <div class="sport-box__inner-title-location">Pink Sands Beach <span>|</span> Bahamas</div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-4.jpg);">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title">Surfing</div>
+            <div class="sport-box__inner-title-location">South Beach <span>|</span> Miami</div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-5.jpeg);">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title">Flyboarding</div>
+            <div class="sport-box__inner-title-location">Copacabana<span>|</span>Brazil</div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-6.jpeg);">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title">Wakeskating</div>
+            <div class="sport-box__inner-title-location">Varadero<span>|</span>Cuba</div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-7.jpg);">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title">Snorkeling</div>
+            <div class="sport-box__inner-title-location">Lombok<span>|</span>Indonesia</div>
+            <div class="btn-box">
+              <a href="#" class="btn">
+                view <span>more</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="sport-box" style="background-image: url(img/sport-8.jpeg);">
+          <div class="sport-box__inner">
+            <div class="sport-box__inner-title">Sup Boarding</div>
+            <div class="sport-box__inner-title-location">Wakaya<span>|</span>Fiji</div>
             <div class="btn-box">
               <a href="#" class="btn">
                 view <span>more</span>
@@ -168,7 +246,6 @@
           </div>
         </div>
       </div>
-    </div>
   </section>
   <!-- SPORT -->
 
