--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
         </div>
       </div>
     </div>
-    <div class="slider-dots">
+    <div class="slider-dotshead">
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">AU</div>
@@ -153,7 +153,258 @@
           </div>
           <div class="subtitle__head">
             wrocław <span>|</span> pl
+          </div>
+        </div>
+      </div>
+      <!-- slider-map slider-dots -->
+      <div class="slider-map">
+        <!-- 1 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
             </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 2 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 3 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 4 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 5 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 6 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 7 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
+        </div>
+        <!-- 8 slider-dots -->
+        <div class="slider-dots">
+          <div class="slider-dots__circle"></div>
+          <div class="slider-dots__content"></div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-head">
+              <div class="slider-dots__content-title"></div>
+              <div class="slider-dots__content-subtitle"></div>
+            </div>
+            <a class="slider-dots__content-link" href="#">
+              <img src="img/arrows-right.svg" alt="">
+            </a>
+          </div>
+          <div class="slider-dots__content-row">
+            <div class="slider-dots__content-item">
+              <img src="img/Surf.svg" alt="">
+              <div class="slider-dots__content-number">1-7</div>
+              <div class="slider-dots__content-name">Surf (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Water.svg" alt="">
+              <div class="slider-dots__content-number">+ 2.3</div>
+              <div class="slider-dots__content-name">Tide (FT)</div>
+            </div>
+            <div class="slider-dots__content-item">
+              <img src="img/Wind.svg" alt="">
+              <div class="slider-dots__content-number">4 SE</div>
+              <div class="slider-dots__content-name">Wind (KTS)</div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="sport-slider">
@@ -163,7 +414,7 @@
             <div class="sport-box__inner-title-location">Whitehaven Beach <span>|</span> Australia</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -174,7 +425,7 @@
             <div class="sport-box__inner-title-location">Las Salinas <span>|</span> Spain </div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -185,7 +436,7 @@
             <div class="sport-box__inner-title-location">Pink Sands Beach <span>|</span> Bahamas</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -196,7 +447,7 @@
             <div class="sport-box__inner-title-location">South Beach <span>|</span> Miami</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -204,10 +455,10 @@
         <div class="sport-box" style="background-image: url(img/sport-5.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Flyboarding</div>
-            <div class="sport-box__inner-title-location">Copacabana<span>|</span>Brazil</div>
+            <div class="sport-box__inner-title-location">Copacabana <span>|</span> Brazil</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -215,10 +466,10 @@
         <div class="sport-box" style="background-image: url(img/sport-6.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Wakeskating</div>
-            <div class="sport-box__inner-title-location">Varadero<span>|</span>Cuba</div>
+            <div class="sport-box__inner-title-location">Varadero <span>|</span> Cuba</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -226,10 +477,10 @@
         <div class="sport-box" style="background-image: url(img/sport-7.jpg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Snorkeling</div>
-            <div class="sport-box__inner-title-location">Lombok<span>|</span>Indonesia</div>
+            <div class="sport-box__inner-title-location">Lombok <span>|</span> Indonesia</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
@@ -237,10 +488,10 @@
         <div class="sport-box" style="background-image: url(img/sport-8.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Sup Boarding</div>
-            <div class="sport-box__inner-title-location">Wakaya<span>|</span>Fiji</div>
+            <div class="sport-box__inner-title-location">Wakaya <span>|</span> Fiji</div>
             <div class="btn-box">
               <a href="#" class="btn">
-                view <span>more</span>
+               view <span>|</span> more
               </a>
             </div>
           </div>
