implemented dots and bg

--- a/app/index.html
+++ b/app/index.html
@@ -164,8 +164,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Whitehaven Beach</div>
+                <div class="slider-dots__content-subtitle">Australia</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -196,8 +196,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Whitehaven Beach</div>
+                <div class="slider-dots__content-subtitle">Australia</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
