fixed block sport

--- a/app/index.html
+++ b/app/index.html
@@ -149,10 +149,10 @@
       <div class="sport__subtitle">
         <div class="subtitle">
           <div class="suptitle-left">
-            Aktualna lokalizacja
+            wybierz swoje sportową wakacje
           </div>
           <div class="subtitle__head">
-            wrocław <span>|</span> pl
+            worldwide
           </div>
         </div>
       </div>
@@ -174,12 +174,12 @@
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
                 <img src="img/Surf.svg" alt="">
-                <div class="slider-dots__content-number">1-7</div>
+                <div class="slider-dots__content-number">3-11</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 3.3</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
@@ -196,8 +196,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title">Whitehaven Beach</div>
-                <div class="slider-dots__content-subtitle">Australia</div>
+                <div class="slider-dots__content-title">Las Salinas</div>
+                <div class="slider-dots__content-subtitle">Spain</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -206,17 +206,17 @@
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
                 <img src="img/Surf.svg" alt="">
-                <div class="slider-dots__content-number">1-7</div>
+                <div class="slider-dots__content-number">1-3</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 2.1</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">3 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
@@ -228,8 +228,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Pink Sands Beach</div>
+                <div class="slider-dots__content-subtitle">Bahamas</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -243,12 +243,12 @@
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 2.7</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">3 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
@@ -260,8 +260,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">South Beach</div>
+                <div class="slider-dots__content-subtitle">Miami</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -270,17 +270,17 @@
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
                 <img src="img/Surf.svg" alt="">
-                <div class="slider-dots__content-number">1-7</div>
+                <div class="slider-dots__content-number">3-11</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 2.1</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">2 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
@@ -292,8 +292,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Copacabana</div>
+                <div class="slider-dots__content-subtitle">Brazil</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -307,12 +307,12 @@
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 1.9</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">2 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
@@ -324,8 +324,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Varadero</div>
+                <div class="slider-dots__content-subtitle">Cuba</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -334,7 +334,7 @@
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
                 <img src="img/Surf.svg" alt="">
-                <div class="slider-dots__content-number">1-7</div>
+                <div class="slider-dots__content-number">2-9</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
@@ -344,7 +344,7 @@
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">5 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
@@ -356,8 +356,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Lombok</div>
+                <div class="slider-dots__content-subtitle">Indonesia</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -366,17 +366,17 @@
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
                 <img src="img/Surf.svg" alt="">
-                <div class="slider-dots__content-number">1-7</div>
+                <div class="slider-dots__content-number">3-9</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 2.7</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">1 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
@@ -388,8 +388,8 @@
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-head">
-                <div class="slider-dots__content-title"></div>
-                <div class="slider-dots__content-subtitle"></div>
+                <div class="slider-dots__content-title">Wakaya</div>
+                <div class="slider-dots__content-subtitle">Fiji</div>
               </div>
               <a class="slider-dots__content-link" href="#">
                 <img src="img/arrows-right.svg" alt="">
@@ -398,17 +398,17 @@
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
                 <img src="img/Surf.svg" alt="">
-                <div class="slider-dots__content-number">1-7</div>
+                <div class="slider-dots__content-number">1-3</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Water.svg" alt="">
-                <div class="slider-dots__content-number">+ 2.3</div>
+                <div class="slider-dots__content-number">+ 3.4</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
                 <img src="img/Wind.svg" alt="">
-                <div class="slider-dots__content-number">4 SE</div>
+                <div class="slider-dots__content-number">2 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
             </div>
