--- a/app/index.html
+++ b/app/index.html
@@ -223,6 +223,7 @@
         </div>
         <!-- 3 slider-dots -->
         <div class="slider-dots slider-dots--ba">
+          <div class="slider-dots__click">kliknij</div>
           <div class="slider-dots__circle"></div>
           <div class="slider-dots__content">
             <div class="slider-dots__content-row">
@@ -421,7 +422,7 @@
             <div class="sport-box__inner-title-location">Whitehaven Beach <span>|</span> Australia</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -432,7 +433,7 @@
             <div class="sport-box__inner-title-location">Las Salinas <span>|</span> Spain </div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -443,7 +444,7 @@
             <div class="sport-box__inner-title-location">Pink Sands Beach <span>|</span> Bahamas</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+               zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -454,7 +455,7 @@
             <div class="sport-box__inner-title-location">South Beach <span>|</span> Miami</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -465,7 +466,7 @@
             <div class="sport-box__inner-title-location">Copacabana <span>|</span> Brazil</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -476,7 +477,7 @@
             <div class="sport-box__inner-title-location">Varadero <span>|</span> Cuba</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -487,7 +488,7 @@
             <div class="sport-box__inner-title-location">Lombok <span>|</span> Indonesia</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -498,7 +499,7 @@
             <div class="sport-box__inner-title-location">Wakaya <span>|</span> Fiji</div>
             <div class="btn-box">
               <a href="#" class="btn">
-               view <span>|</span> more
+                zobacz <span> | </span> więcej
               </a>
             </div>
           </div>
@@ -509,12 +510,57 @@
 
   <!-- Travel -->
   <section class="travel">
+    <div class="container">
     <div class="title">
       <span>
         Podróż
         <h3>Podróż</h3>
       </span>
     </div>
+    <div class="travel__slider">
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg.jpg);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   </section>
   <!-- Travel -->
 
