--- a/app/index.html
+++ b/app/index.html
@@ -519,7 +519,301 @@
     </div>
     <div class="travel__slider">
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg.jpg);">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+      <!-- 2 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg1.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+            <!-- 3 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg2.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+                  <!-- 4 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg3.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+                  <!-- 5 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg4.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+                  <!-- 6 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg5.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+                  <!-- 7 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg6.png);">
+          <div class="travel-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">aktualne oferty</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Airline</div>
+            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="travel-slider__info">
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Dystans</div>
+            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle">Czas podróży</div>
+            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="travel-slider__info-item">
+            <div class="travel-slider__info-subtitle"> cennik</div>
+            <div class="travel-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="travel-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+                  <!-- 8 -->
+      <div class="travel__slider-item travel-slider">
+        <div class="travel-slider__top" style="background-image: url(img/travel-bg7.png);">
           <div class="travel-slider__subtitle">
             <div class="subtitle">
               <div class="suptitle-left">aktualne oferty</div>
