implemented skick slider and picture

--- a/app/index.html
+++ b/app/index.html
@@ -860,7 +860,7 @@
   <!-- Travel -->
 
   <!-- Relax -->
-  <section class="travel">
+  <section class="relax">
     <div class="container">
     <div class="title">
       <span>
@@ -868,44 +868,104 @@
         <h3>Relaksacja</h3>
       </span>
     </div>
-    <div class="travel__slider">
+    <div class="relax__slider">
       <!-- 1 -->
-      <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg.png);">
-          <div class="travel-slider__subtitle">
+      <div class="relax__slider-item relax-slider">
+        <div class="relax-slider__top" style="background-image: url(img/travel-bg7.png);">
+          <div class="relax-slider__subtitle">
             <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
+              <div class="suptitle-left">apartamenty znajdują się</div>
               <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
             </div>
           </div>
         </div>
-        <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
+        <div class="relax-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
-            <div class="descr__head">Virgin Australia <img src="img/Object.svg" alt=""></div>
+            <div class="suptitle-right">Rating</div>
+            <div class="descr__head">Bardzo dobry
+              <ul class="relax__star-list">
+                <li>
+                  <img src="img/relax/orange-star.svg" alt="">
+                </li>
+                <li>
+                  <img src="img/relax/orange-star.svg" alt="">
+                </li>
+                <li>
+                  <img src="img/relax/orange-star.svg" alt="">
+                </li>
+                <li>
+                  <img src="img/relax/orange-star.svg" alt="">
+                </li>
+                <li>
+                  <img src="img/relax/orange-star.svg" alt="">
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitsundes Queensland</div>
+        <div class="relax-slider__info">
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle">Resort</div>
+            <div class="relax-slider__info-title">Whitsundes Queensland</div>
           </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle">Dystans</div>
+            <div class="relax-slider__info-title">11,370015 kilometrów</div>
           </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle">Czas podróży</div>
+            <div class="relax-slider__info-title">23 godziny 5 minut</div>
           </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle"> cennik</div>
+            <div class="relax-slider__info-title">€299 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
         </div>
-        <div class="travel-slider__btn">
+        <div class="relax-slider__btn">
+          <a href="#" class="btn">
+            zobacz <span> | </span> więcej
+          </a>
+        </div>
+      </div>
+      <!-- 2 -->
+      <div class="relax__slider-item relax-slider">
+        <div class="relax-slider__top" style="background-image: url(img/travel-bg6.png);">
+          <div class="relax-slider__subtitle">
+            <div class="subtitle">
+              <div class="suptitle-left">apartamenty znajdują się</div>
+              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+            </div>
+          </div>
+        </div>
+        <div class="relax-slider__descr" style="background-image: url(img/Bitmap.png);">
+          <div class="descr">
+            <div class="suptitle-right">Rating</div>
+            <div class="descr__head">Wyjątkowy<img src="img/relax/orange-star.svg" alt=""></div>
+          </div>
+        </div>
+        <div class="relax-slider__info">
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitlewrap">Miejsce docelowe</div>
+            <div class="relax-slider__info-title">Whitsundes Queensland</div>
+          </div>
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle">Dystans</div>
+            <div class="relax-slider__info-title">11,370015 kilometrów</div>
+          </div>
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle">Czas podróży</div>
+            <div class="relax-slider__info-title">23 godziny 5 minut</div>
+          </div>
+          <div class="relax-slider__info-item">
+            <div class="relax-slider__info-subtitle"> cennik</div>
+            <div class="relax-slider__info-title">€1,537 euro
+              <span>Podróż w obie strony</span>
+            </div>
+          </div>
+        </div>
+        <div class="relax-slider__btn">
           <a href="#" class="btn">
             zobacz <span> | </span> więcej
           </a>
@@ -916,7 +976,7 @@
   <!-- Relax -->
 
   <!-- Shop -->
-  <section class="travel">
+  <section class="relax">
     <div class="title">
       <span>
         Relaksacja
