--- a/app/index.html
+++ b/app/index.html
@@ -909,17 +909,25 @@
             <div class="relax-slider__info-title">Whitsundes Queensland</div>
           </div>
           <div class="relax-slider__info-item">
-            <div class="relax-slider__info-subtitle">Dystans</div>
-            <div class="relax-slider__info-title">11,370015 kilometrów</div>
+            <div class="relax-slider__info-subtitle">Liczba nocy</div>
+            <div class="relax-slider__info-titleplus">Pobyt na 
+              <div class="quantity">
+                <input type="number" min="1" max="20" step="1" value="7">
+              </div>nocy</div>
           </div>
           <div class="relax-slider__info-item">
-            <div class="relax-slider__info-subtitle">Czas podróży</div>
-            <div class="relax-slider__info-title">23 godziny 5 minut</div>
+            <div class="relax-slider__info-subtitle">liczba Gości</div>
+            <div class="relax-slider__info-titleplus">
+            <div class="quantity">
+              <input type="number" min="1" max="14" step="1" value="2">
+            </div>osoby</div>
+            <div class="slider-dots__clicks">kliknij</div>
           </div>
           <div class="relax-slider__info-item">
             <div class="relax-slider__info-subtitle"> cennik</div>
-            <div class="relax-slider__info-title">€299 euro
-              <span>Podróż w obie strony</span>
+            <div class="relax-slider__info-title">
+              <span class="summ">€249</span> euro
+              <span class="relax-pricing__span">za jedną noc</span>
             </div>
           </div>
         </div>
