--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,14 @@
           </svg>
           
       </div>
+      <!-- menu burger -->
+      <div class="menu-btn">
+        <div class="menu-btn__inner">
+          <div class="menu-btn__line"></div>
+          <div class="menu-btn__line"></div>
+          <div class="menu-btn__line"></div>
+        </div>
+      </div>
       <div class="header__aside">
         <div class="logo">
           <a href="#">
