fixed  adaptive in header

--- a/app/index.html
+++ b/app/index.html
@@ -121,25 +121,25 @@
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">AU</div>
-          <div class="dots-box__name">Północne wybrzeże</div>
+          <div class="dots-box__name">Północne </div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">PH</div>
-          <div class="dots-box__name">Południowe wybrzeże</div>
+          <div class="dots-box__name">Południowe</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">CA</div>
-          <div class="dots-box__name">Zachodni Brzeg</div>
+          <div class="dots-box__name">Zachodni</div>
         </div>
       </div>
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">FR</div>
-          <div class="dots-box__name">Wschodnie wybrzeże</div>
+          <div class="dots-box__name">Wschodnie</div>
         </div>
       </div>
     </div>
